DoH functionality added