@@ -1,6 +1,8 @@
 package handshake.node.api;
 
 import handshake.database.Database;
+import handshake.node.dns.NameIndex;
+import handshake.wallet.HNSResource;
 
 import java.util.List;
 
@@ -8,50 +10,81 @@ import static handshake.node.api.JsonBuilder.*;
 
 /**
  * Handshake name and DNS record API methods.
- *
- * REST (planned):
- *   GET /name/:name            → name info and current state
- *   GET /name/:name/resource   → DNS resource records
- *
- * RPC (planned):
- *   getnameinfo        — name state (owner, value, expiry, etc.)
- *   getnameresource    — DNS records (NS, A, AAAA, TXT, etc.)
- *   getnameproof       — Urkel tree proof for a name
- *   getnames           — list of all registered names
- *
- * Implementation requires the name index to be built from
- * covenant transactions in the block database (REGISTER, UPDATE,
- * TRANSFER, FINALIZE, REVOKE covenants). This will be populated
- * by the DNS resolver component.
  */
 public class NameApi {
 
     @SuppressWarnings("unused")
     private final Database db;
+    private volatile NameIndex nameIndex;
 
     public NameApi(Database db) {
         this.db = db;
     }
 
+    public void setNameIndex(NameIndex nameIndex) {
+        this.nameIndex = nameIndex;
+    }
+
     // ── REST ──────────────────────────────────────────────────────────────────
 
     public String getNameInfo(String name) {
-        return error("getnameinfo not yet implemented — DNS resolver coming soon", -1);
+        if (nameIndex == null)
+            return error("Name index not ready", -1);
+        byte[] resource = nameIndex.lookup(name);
+        if (resource == null)
+            return "null";
+        List<HNSResource.Record> records = HNSResource.decode(resource);
+        return String.format(
+                "{\"name\":\"%s\",\"state\":\"CLOSED\",\"registered\":true," +
+                        "\"records\":%s,\"resourceSize\":%d}",
+                esc(name),
+                HNSResource.toJson(records),
+                resource.length);
     }
 
     public String getNameResource(String name) {
-        return error("getnameresource not yet implemented — DNS resolver coming soon", -1);
+        if (nameIndex == null)
+            return error("Name index not ready", -1);
+        byte[] resource = nameIndex.lookup(name);
+        if (resource == null)
+            return "null";
+        List<HNSResource.Record> records = HNSResource.decode(resource);
+        return String.format("{\"records\":%s}", HNSResource.toJson(records));
     }
 
     // ── RPC ───────────────────────────────────────────────────────────────────
 
     public String rpcGetNameInfo(List<Object> params) {
         if (params.isEmpty()) throw new RpcException("name required", -8);
-        return getNameInfo(str(params.getFirst()));
+        return getNameInfo(params.get(0).toString());
     }
 
     public String rpcGetNameResource(List<Object> params) {
         if (params.isEmpty()) throw new RpcException("name required", -8);
-        return getNameResource(str(params.getFirst()));
+        return getNameResource(params.get(0).toString());
+    }
+
+    public String rpcGetNameProof(List<Object> params) {
+        if (params.isEmpty()) throw new RpcException("name required", -8);
+        return "{\"proof\":null,\"note\":\"Urkel proof not yet implemented\"}";
+    }
+
+    public String rpcGetNames(List<Object> params) {
+        if (nameIndex == null)
+            return error("Name index not ready", -1);
+        return String.format(
+                "[{\"total\":%d,\"note\":\"Use getnameinfo <name> for specific lookup\"}]",
+                nameIndex.size());
+    }
+
+    // ── Helpers ───────────────────────────────────────────────────────────────
+
+    private static String esc(String s) {
+        return s.replace("\\", "\\\\").replace("\"", "\\\"");
+    }
+
+    private static String error(String msg, int code) {
+        return String.format("{\"error\":{\"message\":\"%s\",\"code\":%d}}",
+                msg, code);
     }
 }
